--- a/a4/receipt-style.css
+++ b/a4/receipt-style.css
@@ -76,7 +76,7 @@ body {
     background-color: rgb(117, 230, 220);
     border-top: teal 3px solid;
 }
-#seat-heading, #ticket-heading {
+#seat-heading, #ticket-heading, #cinemax-foot {
     color: teal;
 }
 #gst-total, #gst-total td {
@@ -96,11 +96,28 @@ table, th, td {
     border: 1px solid black;
 }
 .ticket{
-    border-radius: 25px;
-    border: 2px solid teal;
-    padding: 20px; 
+    padding: 50px; 
     width: 800px;
-    height: 300px;  
+    height: 200px;
+    background-image: url(media/ticket.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    font-family: Montserrat;
+    color: rgb(20, 20, 20);
+    -webkit-print-color-adjust: exact;
+    color-adjust: exact;
+}
+#ticket-group {
+    padding: 50px; 
+    width: 100%;
+    height: 100%;
+    background-image: url(media/ticketgroup.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    font-family: Montserrat;
+    color: rgb(20, 20, 20);
+    -webkit-print-color-adjust: exact;
+    color-adjust: exact;
 }
 .ticket-info {
     font-size: 20px;
@@ -131,7 +148,7 @@ table, th, td {
         font-size: 12pt;
     }
     .header-info {
-        padding: 8px;
+        padding: 10px;
     }
 }
 @media screen and (max-width:1000px){
@@ -149,11 +166,15 @@ table, th, td {
     }
     #anb-num {
         left: 3%;
-        bottom: 20%;
+        bottom: 15%;
         font-size: 10pt;
     }
     .header-info {
         padding: 5px;
+    }
+    #ticket-group {
+        width: 1000px;
+        height: 300px;
     }
 }
 @media print {
@@ -175,7 +196,7 @@ table, th, td {
     h1+p, h2+p, h3+p {
         page-break-before: avoid;
     }
-    table, figure {
+    table, figure, #ticket-group, .ticket {
         page-break-inside: avoid;
     }
     #header-table {
@@ -192,10 +213,13 @@ table, th, td {
     }
     #anb-num {
         left: 5%;
-        bottom: 20%;
+        bottom: 15%;
         font-size: 10pt;
     }
     .header-info {
         padding: 5px;
+    }
+    #ticket-heading {
+        page-break-before: always;
     }
 }
