sync team mate's contributions

--- a/a4/receipt-style.css
+++ b/a4/receipt-style.css
@@ -62,6 +62,8 @@ body {
     background-size: contain;
     height: 20px;
     opacity: 0.8;
+    -webkit-print-color-adjust: exact;
+    color-adjust: exact;
 }
 .seats-table {
     border-collapse: collapse;
