link product-detail.php to cart.php

--- a/a5/style.css
+++ b/a5/style.css
@@ -338,3 +338,10 @@ section#copyright{
 	width: 100%;
 	height: 300px;
 }
+
+table{
+	border-collapse: collapse;
+}
+table, th, td{
+	border: 1px solid black;
+}
