--- a/a5/style.css
+++ b/a5/style.css
@@ -37,13 +37,19 @@ a:hover {
     border-radius: 4px;
     border-bottom: #eb4800 5px solid;
 }
+#top-bar {
+	margin: 3px auto 3px auto;
+	padding:0px 10px;
+}
+#wrapper {
+	margin: 3px auto 3px auto;
+	padding: 20px 10px;
+}
 #wrapper,#top-bar{
 	background: #fff;
-	margin: 3px auto 3px auto;
 	box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
 	-moz-box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
 	-webkit-box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
-	padding:0px 10px;
 }
 #about-us {
     text-align: justify;
@@ -135,15 +141,15 @@ label {
     width: 140px;
     text-align: right;
 }
-#login-form, #add-form, #logout-form, #admin-activity, #add-adform, #prodsearch, #update-pform, #del-pform {
+#login-form, #add-form, #logout-form, #admin-activity, #add-adform, #prodsearch, #update-pform, #del-pform, #add-cform, #del-cform, #del-cconfirm {
     padding: 10px;
     border: double 2px rgb(216, 216, 216);
     border-radius: 20px;
 }
-#login-form fieldset div.form-group, #logout-form div.form-group, #logout-form p, #admin-activity, #add-adform, #prodsearch, #del-pform {
+#login-form fieldset div.form-group, #logout-form div.form-group, #logout-form p, #admin-activity, #add-adform, #prodsearch, #del-pform, #add-cform, #del-cform, #del-cconfirm {
     text-align: center;
 }
-#logout-form p, #add-form p, #update-pform, #update-pform label {
+#logout-form p, #add-form p, #update-pform, #update-pform label, #add-cform label, #del-cform label, #del-cconfirm {
 	font-size: 14px;
 }
 #login-form label, #add-adform label, #add-form label, #del-pform label {
@@ -155,10 +161,17 @@ label {
 	padding: 10px;
 	font-size: 14px;
 }
-.del-img{
+.del-img {
 	height: 100%;
 	width: 100%;
 	padding: 5px;
+}
+.view-wrapper {
+	text-align: center;
+	margin: 0 auto;
+}
+.admin-avt {
+	height: 100px;
 }
 .del-img:hover {
 	padding: 5px;
@@ -177,7 +190,7 @@ section.header_text.sub{
 .success {
 	color: green;
 }
-#update-pform, #delete-pform {
+#update-pform, #delete-pform, #del-cconfirm {
 	display: none;
 }
 #delete-pform {
